
file(GLOB_RECURSE ENLIVENGINE_TESTS_PLATFORM_FILES "Platform/*")
source_group("Platform" FILES ${ENLIVENGINE_TESTS_PLATFORM_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_UTILS_FILES "Utils/*")
source_group("Utils" FILES ${ENLIVENGINE_TESTS_UTILS_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_MATH_FILES "Math/*")
source_group("Math" FILES ${ENLIVENGINE_TESTS_MATH_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_SDL_FILES "SDL/*")
source_group("SDL" FILES ${ENLIVENGINE_TESTS_SDL_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_WINDOW_FILES "Window/*")
source_group("Window" FILES ${ENLIVENGINE_TESTS_WINDOW_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_META_FILES "Meta/*")
source_group("Meta" FILES ${ENLIVENGINE_TESTS_META_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_RESOURCES_FILES "Resources/*")
source_group("Resources" FILES ${ENLIVENGINE_TESTS_RESOURCES_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_AUDIO_FILES "Audio/*")
source_group("Audio" FILES ${ENLIVENGINE_TESTS_AUDIO_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_GRAPHICS_FILES "Graphics/*")
source_group("Graphics" FILES ${ENLIVENGINE_TESTS_GRAPHICS_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_ANIMATION_FILES "Animation/*")
source_group("Animation" FILES ${ENLIVENGINE_TESTS_ANIMATION_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_TILED_FILES "Tiled/*")
source_group("Tiled" FILES ${ENLIVENGINE_TESTS_TILED_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_CORE_FILES "Core/*")
source_group("Core" FILES ${ENLIVENGINE_TESTS_CORE_FILES})

file(GLOB_RECURSE ENLIVENGINE_TESTS_TOOLS_FILES "Tools/*")
source_group("Tools" FILES ${ENLIVENGINE_TESTS_TOOLS_FILES})

add_executable(EnlivengineTests
	Tests.cpp
	${ENLIVENGINE_TESTS_PLATFORM_FILES}
	${ENLIVENGINE_TESTS_UTILS_FILES}
	${ENLIVENGINE_TESTS_MATH_FILES}
	${ENLIVENGINE_TESTS_SDL_FILES}
	${ENLIVENGINE_TESTS_WINDOW_FILES}
	${ENLIVENGINE_TESTS_META_FILES}
	${ENLIVENGINE_TESTS_RESOURCES_FILES}
	${ENLIVENGINE_TESTS_AUDIO_FILES}
	${ENLIVENGINE_TESTS_GRAPHICS_FILES}
	${ENLIVENGINE_TESTS_ANIMATION_FILES}
	${ENLIVENGINE_TESTS_TILED_FILES}
	${ENLIVENGINE_TESTS_CORE_FILES}
	${ENLIVENGINE_TESTS_TOOLS_FILES}
)
target_link_libraries(EnlivengineTests PRIVATE Enlivengine)
set_target_properties(EnlivengineTests PROPERTIES FOLDER "Enlivengine")

add_test(NAME Tests COMMAND EnlivengineTests)
	